[package]
name = "ferrox"
version = "0.1.0"
authors = ["Sergio de Carvalho <sergio.carvalho@workday.com>"]
edition = "2018"

[dependencies]
bootloader = "0.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.9.5"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 180

[[test]]
name = "should_panic"
harness = false